--- a/index.html
+++ b/index.html
@@ -6,20 +6,22 @@
     <link rel="stylesheet" href="css/styles.css" type="text/css">
 </head>
 <body>
-    <aside>
-        <h1>You're in Santo Domingo</h1>
-        <div class="locations">
-            <ul data-bind="foreach : places">
-                <li data-bind="text : $data.title"></li>
-            </ul>
-        </div>
-    </aside>
-    <div id="map"></div>
+
+    <div>
+        <select>
+            <option>open now</option>
+        </select>
+        <ul data-bind="foreach: locations">
+            <li data-bind="click: $root.highlightItem, text: $data.title"></li>
+        </ul>
+    </div>
+    <!--<div id="map"></div>-->
+
     <script src="js/lib/knockout-3.4.1.js"></script>
     <script src="js/locations.js"></script>
     <script src="js/app.js"></script>
-    <script async defer
-            src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyA2WdAm_egMhv6ledFOuhHoNrWlMgDL1cc&callback=loadMap">
-    </script>
+    <!--<script async defer-->
+            <!--src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyA2WdAm_egMhv6ledFOuhHoNrWlMgDL1cc&callback=loadMap">-->
+    <!--</script>-->
 </body>
 </html>
