fix: Bug with filter function. Remove jQuery usage

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <p>Credits or something here :P</p>
     </footer>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>-->
     <script src="js/lib/knockout-3.4.1.js"></script>
     <script src="js/content.js"></script>
     <script src="js/map.js"></script>
