feat: Integrate Foursquare to populate infoWindow

--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
         <p>Credits or something here :P</p>
     </footer>
 
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/lib/knockout-3.4.1.js"></script>
     <script src="js/content.js"></script>
+    <script src="js/fourSquare.js"></script>
     <script src="js/map.js"></script>
     <script src="js/app.js"></script>
     <script async defer
