--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p>
                     One of the first cities to be ever built in America, La Zona Colonial
                     is now but a small neighborhood in the vibrant Caribbean city of Santo Domingo,
-                    full with life and things to see*. Here are a few of the places recommended
+                    full with life and things to see. Here are a few of the places recommended
                     by my sister:
                 </p>
 
@@ -48,13 +48,23 @@
         </section>
 
         <section id="map" class="col-sm-9 map-content"></section>
+        <footer class="container-fluid col-sm-9 ">
+            <h3>About this site</h3>
+            <p>
+                This site was developed by <a href="#">Jennifer</a> for
+                <a href="" target="_blank">Udacity's Front-End Nanodegree Specialization</a>,
+                using <a href="http://knockoutjs.com/" target="_blank">Knockout Framework</a>,
+                the <a href="https://developers.google.com/maps/" target="_blank">Google Maps API</a>,
+                <a href="https://developer.foursquare.com/" target="_blank">Foursquare's API</a>
+                and a tiny bit of <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>'s styles
+            </p>
+            <img src="img/ko-logo.png" class="icon-lr"/>
+            <img src="img/google-maps-logo.svg" class="icon-sm"/>
+            <img src="img/foursquare-icon.png" class="icon-sm"/>
+        </footer>
 
     </div>
 
-    <footer class="container-fluid">
-        <p>* Sorry, but the beaches are about 45min drive!</p>
-        <p>Credits or something here :P</p>
-    </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/lib/knockout-3.4.1.js"></script>
@@ -62,21 +72,6 @@
     <script src="js/fourSquare.js"></script>
     <script src="js/map.js"></script>
     <script src="js/app.js"></script>
-    <script>
-        function handleGoogleError() {
-            const mapSection = document.getElementById('map');
-            const sorryHTML = '<div class="map-missing-excuse"><h1>Uh oh!</h1>'
-                + '<h2>Something went wrong</h2>'
-                + '<h2>loading the map from Google</h2>'
-                + '<h3>Make sure you are connected to the internet</h3>'
-                + '<h3>and try reloading this page</h3>'
-                + '<h4>In the midtime...</h4>'
-                + '<p>You can still see (just) the list of recommended places.</p></div>'
-
-            mapSection.className += ' map-placeholder';
-            mapSection.innerHTML = sorryHTML;
-        }
-    </script>
 
     <script async defer
         src='https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyA2WdAm_egMhv6ledFOuhHoNrWlMgDL1cc&callback=loadMap'
