chore: Remove unused files

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>La Zona Colonial in Santo Domingo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/lib/css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -64,7 +64,6 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-body">
-                    <!--<button type="button" class="btn btn-default" data-dismiss="modal">x</button>-->
                     <span data-dismiss="modal" class="close">x</span>
                     <p>
                         This site was developed by <a href="#">Jennifer</a> for
