fix: Allow to open the InfoWindow everytime, when the same marker is clicked on repeatedly.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <span class="close" aria-hidden="true" aria-label="Close"
                   data-bind="event: {click : hideFilterSection}, visible: !isSectionHidden() && windowIsSmall()">x</span>
 
+            <!--Change to toggle-menu. Check reviewer's suggestions on Interface Design section -->
             <span class="caret"
                   data-bind="event: {click : showFilterSection}, visible: isSectionHidden() &&  windowIsSmall()"></span>
 
