refactor: Add Bootstrap's font folder to project.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
                   data-bind="event: {click : hideFilterSection}, visible: !isSectionHidden() && windowIsSmall()">x</span>
 
             <!--Change to toggle-menu. Check reviewer's suggestions on Interface Design section -->
-            <span class="caret"
+            <!--<span class="caret"-->
+            <span class="glyphicon glyphicon-align-justify"
                   data-bind="event: {click : showFilterSection}, visible: isSectionHidden() &&  windowIsSmall()"></span>
 
             <header>
