--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
 
     <div class="row">
         <section class="col-sm-3 content">
-            <span class="close" aria-hidden="true" aria-label="Close"
-                  data-bind="event: {click : hideFilterSection}, visible: !isSectionHidden() && windowIsSmall()">x</span>
+            <span class="glyphicon glyphicon-remove" aria-hidden="true"
+                  data-bind="event: {click : hideFilterSection}, visible: !isSectionHidden() && windowIsSmall()"></span>
 
-            <!--Change to toggle-menu. Check reviewer's suggestions on Interface Design section -->
-            <!--<span class="caret"-->
             <span class="glyphicon glyphicon-align-justify"
                   data-bind="event: {click : showFilterSection}, visible: isSectionHidden() &&  windowIsSmall()"></span>
 
